2009-11-02  Joanmarie Diggs  <joanmarie.diggs@gmail.com>

Reviewed by Xan Lopez.

        https://bugs.webkit.org/show_bug.cgi?id=31035
        [GTK] some accessibility tests hitting assertion in debug builds

        Get the correct Gtk+ object before attempting to turn it into an AtkObject.

        * DumpRenderTree/gtk/AccessibilityControllerGtk.cpp:
        (AccessibilityController::rootElement):

Canonical link: https://commits.webkit.org/41878@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50445 268f45cc-cd09-0410-ab3c-d52691b4dbfc